Remove: MBTI 입력 필드에서 datalist 제거 - 순수 텍스트 입력으로 변경

--- a/2026bible/index.html
+++ b/2026bible/index.html
@@ -98,8 +98,7 @@
 
                     <div>
                         <label class="block text-xs font-bold text-slate-400 mb-2 ml-1">MBTI</label>
-                        <input id="mbti" list="mbti-list" oninput="this.value = this.value.toUpperCase()" class="w-full bg-indigo-50/50 border border-indigo-200 rounded-xl p-4 text-center text-2xl font-bold uppercase text-slate-800 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-100 outline-none transition placeholder-indigo-300 tracking-widest" placeholder="ENFP" maxlength="4">
-                        <datalist id="mbti-list"></datalist>
+                        <input id="mbti" oninput="this.value = this.value.toUpperCase()" class="w-full bg-indigo-50/50 border border-indigo-200 rounded-xl p-4 text-center text-2xl font-bold uppercase text-slate-800 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-100 outline-none transition placeholder-indigo-300 tracking-widest" placeholder="ENFP" maxlength="4">
                     </div>
                     
                     <div>
@@ -143,26 +142,7 @@
     </div>
 
     <script>
-        // 초기화 - datalist 채우기
-        function initMbtiList() {
-            const validMbtiList = ["ISTJ","ISFJ","INFJ","INTJ","ISTP","ISFP","INFP","INTP","ESTP","ESFP","ENFP","ENTP","ESTJ","ESFJ","ENFJ","ENTJ"];
-            const dataList = document.getElementById('mbti-list');
-            if (dataList) {
-                dataList.innerHTML = ''; // 기존 옵션 제거
-                validMbtiList.forEach(t => { 
-                    let opt = document.createElement('option'); 
-                    opt.value = t; 
-                    dataList.appendChild(opt); 
-                });
-            }
-        }
-        
-        // DOM 로드 후 초기화
-        if (document.readyState === 'loading') {
-            document.addEventListener('DOMContentLoaded', initMbtiList);
-        } else {
-            initMbtiList();
-        }
+        const validMbtiList = ["ISTJ","ISFJ","INFJ","INTJ","ISTP","ISFP","INFP","INTP","ESTP","ESFP","ENFP","ENTP","ESTJ","ESFJ","ENFJ","ENTJ"];
 
         let selectedGender = '';
 
