--- a/biz/index.html
+++ b/biz/index.html
@@ -91,12 +91,12 @@
                     <div class="flex flex-col md:flex-row items-center justify-between gap-4">
                         <div class="w-full">
                             <label class="block text-xs font-bold text-slate-400 mb-2 ml-1">나의 MBTI (부하직원)</label>
-                            <input id="mbti-a" list="mbti-list" oninput="this.value = this.value.toUpperCase()" class="w-full bg-slate-50 border border-slate-200 rounded-xl p-4 text-center text-2xl font-bold uppercase text-slate-800 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-100 outline-none transition placeholder-slate-300 tracking-widest" placeholder="INFP" maxlength="4">
+                            <input id="mbti-a" oninput="this.value = this.value.toUpperCase()" class="w-full bg-slate-50 border border-slate-200 rounded-xl p-4 text-center text-2xl font-bold uppercase text-slate-800 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-100 outline-none transition placeholder-slate-300 tracking-widest" placeholder="INFP" maxlength="4">
                         </div>
                         <i class="fas fa-briefcase text-indigo-300 text-2xl animate-pulse mt-2 md:mt-0"></i>
                         <div class="w-full">
                             <label class="block text-xs font-bold text-slate-400 mb-2 ml-1">상사의 MBTI (팀장)</label>
-                            <input id="mbti-b" list="mbti-list" oninput="this.value = this.value.toUpperCase()" class="w-full bg-slate-50 border border-slate-200 rounded-xl p-4 text-center text-2xl font-bold uppercase text-slate-800 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-100 outline-none transition placeholder-slate-300 tracking-widest" placeholder="ESTJ" maxlength="4">
+                            <input id="mbti-b" oninput="this.value = this.value.toUpperCase()" class="w-full bg-slate-50 border border-slate-200 rounded-xl p-4 text-center text-2xl font-bold uppercase text-slate-800 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-100 outline-none transition placeholder-slate-300 tracking-widest" placeholder="ESTJ" maxlength="4">
                         </div>
                     </div>
                     
@@ -224,20 +224,9 @@
         Ver 3.6 Biz NoLock
     </div>
 
-    <datalist id="mbti-list"></datalist>
-
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const validMbtiList = ["ISTJ","ISFJ","INFJ","INTJ","ISTP","ISFP","INFP","INTP","ESTP","ESFP","ENFP","ENTP","ESTJ","ESFJ","ENFJ","ENTJ"];
-            const dataList = document.getElementById('mbti-list');
-            if (dataList) {
-                dataList.innerHTML = ''; // 기존 옵션 제거
-                validMbtiList.forEach(t => { 
-                    let opt = document.createElement('option'); 
-                    opt.value = t; 
-                    dataList.appendChild(opt); 
-                });
-            }
 
             // 1. 직장/상사 데이터 (리스트형, 상세)
             const mbtiData = {
