--- a/friends-travel/index.html
+++ b/friends-travel/index.html
@@ -92,12 +92,12 @@
                     <div class="flex flex-col md:flex-row items-center justify-between gap-4">
                         <div class="w-full">
                             <label class="block text-xs font-bold text-slate-400 mb-2 ml-1">나의 MBTI</label>
-                            <input id="mbti-a" list="mbti-list" oninput="this.value = this.value.toUpperCase()" class="w-full bg-slate-50 border border-slate-200 rounded-xl p-4 text-center text-2xl font-bold uppercase text-slate-800 focus:border-sky-500 focus:ring-2 focus:ring-sky-100 outline-none transition placeholder-slate-300 tracking-widest" placeholder="ESFP" maxlength="4">
+                            <input id="mbti-a" oninput="this.value = this.value.toUpperCase()" class="w-full bg-slate-50 border border-slate-200 rounded-xl p-4 text-center text-2xl font-bold uppercase text-slate-800 focus:border-sky-500 focus:ring-2 focus:ring-sky-100 outline-none transition placeholder-slate-300 tracking-widest" placeholder="ESFP" maxlength="4">
                         </div>
                         <i class="fas fa-times text-slate-300 text-xl"></i>
                         <div class="w-full">
                             <label class="block text-xs font-bold text-slate-400 mb-2 ml-1">친구 MBTI</label>
-                            <input id="mbti-b" list="mbti-list" oninput="this.value = this.value.toUpperCase()" class="w-full bg-slate-50 border border-slate-200 rounded-xl p-4 text-center text-2xl font-bold uppercase text-slate-800 focus:border-sky-500 focus:ring-2 focus:ring-sky-100 outline-none transition placeholder-slate-300 tracking-widest" placeholder="ISTJ" maxlength="4">
+                            <input id="mbti-b" oninput="this.value = this.value.toUpperCase()" class="w-full bg-slate-50 border border-slate-200 rounded-xl p-4 text-center text-2xl font-bold uppercase text-slate-800 focus:border-sky-500 focus:ring-2 focus:ring-sky-100 outline-none transition placeholder-slate-300 tracking-widest" placeholder="ISTJ" maxlength="4">
                         </div>
                     </div>
                     
@@ -227,20 +227,9 @@
         Ver 2.7 NoLock
     </div>
 
-    <datalist id="mbti-list"></datalist>
-
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const validMbtiList = ["ISTJ","ISFJ","INFJ","INTJ","ISTP","ISFP","INFP","INTP","ESTP","ESFP","ENFP","ENTP","ESTJ","ESFJ","ENFJ","ENTJ"];
-            const dataList = document.getElementById('mbti-list');
-            if (dataList) {
-                dataList.innerHTML = ''; // 기존 옵션 제거
-                validMbtiList.forEach(t => { 
-                    let opt = document.createElement('option'); 
-                    opt.value = t; 
-                    dataList.appendChild(opt); 
-                });
-            }
 
             // 1. 여행 스타일 데이터
             const mbtiData = {
